collection get/set/put to work on for any class & make getProperty work same as get